# Midi-Parser

./: CMakeLists.txt  README.md
include/: Track.h  midi_file.h  track.h
src/: main.cpp  midi_file.cpp  track.cpp
tests/valgrind/: CMakeLists.txt  Midi_Parser.suppressions
